--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title> Jie Wang's Blog </title>
 </head>
 <body>
 	<div style="height: 240px; border: 1px red solid;">
